# booking-app-demo

./: tasks2.md
data-generator/: generate-data.py  hotel_bookings.csv  pyproject.toml  raw_schema.sql  solutions.md  tasks.md
