[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
faker = "^35.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
